--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Asana Extension for Chrome",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Quickly add tasks to Asana from any web page.",
   "icons": {
     "128": "icon128.png",
@@ -9,6 +9,8 @@
     "16": "icon16.png"
   },
   "minimum_chrome_version": "25",
+
+  "options_page": "options.html",
 
   "browser_action": {
     "default_icon": "icon19.png",
