--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Asana Research Extension for Chrome",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Quickly add your research to Asana from any web page or Chrome window.",
   "icons": {
     "128": "icon128.png",
@@ -12,25 +12,14 @@
 
   "options_page": "options.html",
 
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "exclude_matches": ["*://app.asana.com/*"],
-      "js": [ "jquery-1.7.1.min.js", "click_commandeer.js" ],
-      "run_at": "document_end"
-    }
-  ],
-
   "browser_action": {
     "default_icon": "icon19.png",
-    "default_title": "Asana",
-    "default_popup": "popup.html"
+    "default_title": "Asana"
   },
   "background": {
     "persistent": true,
     "scripts": [
       "jquery-1.7.1.min.js",
-      "navigator.js",
       "asana.js",
       "api_bridge.js",
       "extension_server.js",
@@ -50,7 +39,10 @@
     "webNavigation",
     "*://*.asana.com/*",
     "*://use.typekit.net/*",
-    "pageCapture"
+    "pageCapture",
+      "http://*/*",
+      "https://*/*",
+      "*://*/*"
   ],
   "content_security_policy": "script-src 'self' https://use.typekit.net; object-src 'self'",
   "commands": {
