Less permissions, close the window

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Asana Research Extension for Chrome",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Quickly add your research to Asana from any web page or Chrome window.",
   "icons": {
     "128": "icon128.png",
@@ -39,10 +39,7 @@
     "webNavigation",
     "*://*.asana.com/*",
     "*://use.typekit.net/*",
-    "pageCapture",
-      "http://*/*",
-      "https://*/*",
-      "*://*/*"
+    "pageCapture"
   ],
   "content_security_policy": "script-src 'self' https://use.typekit.net; object-src 'self'",
   "commands": {
